# detour

./: .gitignore  Cargo.toml  README.md  config.cfg  config.json  makedocs.sh
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/detour/: all.html  fn.from_epsg_3857_to_4326.html  fn.from_epsg_4326_to_3857.html  fn.main.html  index.html  macro.env.html  sidebar-items.js  struct.BufReader.html  struct.CHFilter.html  struct.CLUSTERINGARGS.html  struct.CONFIG.html  struct.Config.html  struct.Coord.html  struct.OUTPUT.html  struct.Path.html  struct.STATS.html  struct.Statistics.html  struct.StopDetector.html  trait.Read.html
output/: edge_0.csv  edge_1.csv  edge_10.csv  edge_100.csv  edge_101.csv  edge_102.csv  edge_103.csv  edge_104.csv  edge_106.csv  edge_107.csv  edge_108.csv  edge_109.csv  edge_11.csv  edge_110.csv  edge_111.csv  edge_112.csv  edge_113.csv  edge_115.csv  edge_116.csv  edge_117.csv  edge_118.csv  edge_12.csv  edge_123.csv  edge_124.csv  edge_125.csv  edge_126.csv  edge_127.csv  edge_128.csv  edge_129.csv  edge_13.csv  edge_130.csv  edge_131.csv  edge_132.csv  edge_135.csv  edge_139.csv  edge_14.csv  edge_140.csv  edge_142.csv  edge_145.csv  edge_146.csv  (+268 more)
src/: #parser.rs#  .#trajectory.rs  arguments.rs  ch_filter.rs  config.rs  coord.rs  data_structures.rs  datastructures.rs  graph.rs  main.rs  motion_detector.rs  parser.rs  tradis.rs  trajectory.rs  trajectorybuilder.rs  utility.rs
src/data_structures/: #graph.rs#  graph.rs  trajectory.rs
src/datastructures/: graph.rs  trajectory.rs
src/graph/: edge_clustering.rs  (+12 more)
(+337 files in other folders)
