[package]
name = "detour"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
chrono = "0.4"
geo = "0.18.0"
petgraph = "0.6.0"
itertools= "0.10.1"
geomorph = "1.1.0"
trajectory_similarity = { path = "../trajectory_similarity", version = "0.1.0" }