[package]
name = "detour"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
chrono = "0.4"
geo = "0.18.0"
petgraph = "0.6.0"
itertools= "0.10.1"
geomorph = {git = "https://github.com/ErikAndersen81/geomorph.git"}
clap = "3.0.5"
trajectory_similarity = { git = "https://github.com/ErikAndersen81/line_similarity.git" }
lazy_static = "1.4.0"